# hobbyVector

./: README.md
customVectors/: .gitignore  CMakeLists.txt  ColumnVector.cpp  ColumnVector.h  CustomMatrix.cpp  CustomMatrix.h  CustomMatrixElementNotFoundException.cpp  CustomMatrixElementNotFoundException.h  CustomMatrixException.cpp  CustomMatrixException.h  CustomMatrixIncorrectParametersException.cpp  CustomMatrixIncorrectParametersException.h  CustomMatrixNonExistentElementException.cpp  CustomMatrixNonExistentElementException.h  CustomVector.cpp  CustomVector.h  CustomVectorException.cpp  CustomVectorException.h  CustomVectorIncorrectParametersException.cpp  CustomVectorIncorrectParametersException.h  CustomVectorIndexOutOfBoundsException.cpp  CustomVectorIndexOutOfBoundsException.h  CustomVectorLengthCannotBeModifiedException.cpp  CustomVectorLengthCannotBeModifiedException.h  CustomVectorNonExistentElementException.cpp  CustomVectorNonExistentElementException.h  Fraction.cpp  Fraction.h  FractionException.cpp  FractionException.h  RowVector.cpp  RowVector.h  main.cpp  todo.txt
