cmake_minimum_required(VERSION 3.23.2)
project(customVectors)

set(CMAKE_CXX_STANDARD 17)

add_executable(customVectors main.cpp CustomMatrix.cpp CustomMatrix.h CustomVector.cpp CustomVector.h CustomVectorException.cpp CustomVectorException.h CustomVectorIndexOutOfBoundsException.cpp CustomVectorIndexOutOfBoundsException.h CustomVectorNonExistentElementException.cpp CustomVectorNonExistentElementException.h CustomVectorLengthCannotBeModifiedException.cpp CustomVectorLengthCannotBeModifiedException.h CustomVectorIncorrectParametersException.cpp CustomVectorIncorrectParametersException.h CustomMatrixException.cpp CustomMatrixException.h CustomMatrixNonExistentElementException.cpp CustomMatrixNonExistentElementException.h CustomMatrixIncorrectParametersException.cpp CustomMatrixIncorrectParametersException.h Fraction.cpp Fraction.h FractionException.cpp FractionException.h RowVector.cpp RowVector.h ColumnVector.cpp ColumnVector.h)
